Moved creation of the image class into the image service